<b>Version 1.20 Beta 3:</b><br/><br/>
    &#8226; More saving position on timeline<br/>
    &#8226; Fix for 24 hour clock<br/>
    &#8226; Fixed refresh on startup<br/>
    &#8226; Issues with direct message and mentions notifications replaying<br/>
<br/><br/>

<b>Version 1.20 Beta 2:</b><br/><br/>
    &#8226; Real URL's on profiles<br/>
    &#8226; Fixed 7 in tablet mode<br/>
    &#8226; Custom notification sound<br/>
    &#8226; Huge cleanup of settings<br/>
    &#8226; See user's location when viewing a tweet (if it is provided)<br/>
    &#8226; Changed the way that composing is done in-line. Now opens the compose window. Sorry but this is the way it will have to work.<br/>
    &#8226; Attempted some fixes for uploading large images<br/>
    &#8226; More jumping fixes on the timeline<br/>
    &#8226; Updated all the translations<br/>
<br/><br/>

<b>Version 1.20 Beta 1:</b><br/><br/>
    &#8226; Color option for custom themes<br/>
    &#8226; In-line twitpic pictures<br/>
    &#8226; In-line imgur pictures<br/>
    &#8226; No more jumping on the timeline<br/>
    &#8226; 7 in tablet layout also used in landscape on phones<br/>
    &#8226; Roboto Condensed font option<br/>
    &#8226; View users locations, websites, and following status on user profiles<br/>
    &#8226; Get more search results<br/>
    &#8226; Option to open to in app browser on tweets that contain websites<br/>
    &#8226; Use twitter's automatic link shortening<br/>
    &#8226; Got rid of the zoom button in the in app browser<br/>
    &#8226; Fixes for widget<br/>
    &#8226; Italian and French translations<br/>
<br/><br/>

<b>Version 1.13:</b><br/><br/>
    &#8226; Threaded direct messages<br/>
    &#8226; Fill gaps in the timeline from Sync settings<br/>
    &#8226; Theme fixes<br/>
<br/><br/>

<b>Version 1.11:</b><br/><br/>
    &#8226; Threaded direct messages<br/>
    &#8226; Fixes for duplicates - If it does happen, go to advanced settings then clean timeline<br/>