@@ -8,8 +8,8 @@
 
     <LinearLayout android:id="@+id/list_progress"
         android:orientation="vertical"
-        android:layout_height="0dp"
-        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
         android:layout_weight="1"
         android:gravity="center" >
 
